style.css
body {
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center; 
    align-items: center;
    background-color: black;
    height: 100vh;
    overflow: hidden;
}

.mobile-screen {
    width: 550px;  
    height: 100vh; 
    background-color: lightpink; 
    display: flex;
    flex-direction: column;
    position: relative;
    overflow-y: auto;
}



.content {
    padding: 20px;
    flex-grow: 1;
}

.tab-bar {
    display: flex;
    justify-content: space-around;
    background-color:darkblue;
    padding: 10px;
    position: fixed;
    bottom: 0;
    width: 530px;
}

.tab-bar button {
    color: yellow;
    background-color: transparent;
    border: none;
    padding: 10px;
    font-size: 14px;
    cursor: pointer;
}

.tab:hover {
    background-color: lightskyblue; 
}

.tab.active {
    background-color: lightskyblue; 
    font-weight: bold;
}

